--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -115,6 +115,7 @@
 
 					<!-- bs-card-wrap -->
 					<div class="bs-card-wrap pb16">
+						<input type="radio" name="rad001">
 						<div class="bs-card ">
 							<div class="bs-typeA">
 								<div class="top">
@@ -203,6 +204,7 @@
 
 					<!-- bs-card-wrap -->
 					<div class="bs-card-wrap pb16">
+						<input type="radio" name="rad001">
 						<div class="bs-card ">
 							<div class="bs-typeA">
 								<div class="top">
