--- a/html/PBWIV/PBWIV060000.html
+++ b/html/PBWIV/PBWIV060000.html
@@ -97,119 +97,116 @@
 				<!-- content -->
 				<div class="content">
 
-
-					<style>
-						body {
-							background-color: var(--background-bg_lightGray);
-						}
-					</style>
-
 					<!-- tab-content -->
 					<div class="tab-content tab-fluid">
 						<ul class="tab-list tab-col overflow-list px24" role="tablist">
-							<li class="tab tab-active"><a role="tab" href="#">주요지수</a></li>
+							<li class="tab"><a role="tab" href="#">주요지수</a></li>
 							<li class="tab"><a role="tab" href="#">주가지수</a></li>
 							<li class="tab"><a role="tab" href="#">채권금리</a></li>
 							<li class="tab"><a role="tab" href="#">환율/원자재</a></li>
 							<li class="tab"><a role="tab" href="#">경제지표</a></li>
-							<li class="tab"><a role="tab" href="#">섹터지수</a></li>
+							<li class="tab tab-active"><a role="tab" href="#">섹터지수</a></li>
 							<li class="tab"><a role="tab" href="#">관심</a></li>
 						</ul>
 					</div>
 					<!-- //tab-content -->
 
 					<div class="stock-index">
-						<div class="body-caption px4 ar mt16">2024-10-15 01:00 기준</div>
-
-						<div class="stock-index-core mt8">
-							<ul>
-								<li>
-									<a href="#">
-										<dl>
-											<dt>코스피 <i class="live-on" aria-label="실시간"></i></dt>
-											<dd>
-												<strong>9,999.99</strong>
-												<div class="stock rise" aria-label="등락폭(상승)">888.88</div>
-											</dd>
-											<dd>
-												<div class="tags tags-small tags-red-100" aria-label="등락율">+99.99%</div>
-											</dd>
-										</dl>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<dl>
-											<dt>코스닥 <i class="live-off" aria-label="비 실시간"></i></dt>
-											<dd>
-												<strong>9,999.99</strong>
-												<div class="stock fall" aria-label="등락폭(하락)">888.88</div>
-											</dd>
-											<dd>
-												<div class="tags tags-small tags-deepBlue" aria-label="등락율">-00.00</div>
-											</dd>
-										</dl>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<dl>
-											<dt>미국 USD <i class="live-on" aria-label="실시간"></i></dt>
-											<dd>
-												<strong>9,999.99</strong>
-												<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
-											</dd>
-											<dd>
-												<div class="tags tags-small tags-lightGray" aria-label="등락율">00.00</div>
-											</dd>
-										</dl>
-									</a>
-								</li>
-							</ul>
+						<div class="stock-index-list content-fluid px0">
+							<h2 class="headline-small ac mt40">섹터지수</h2>
+							<div class="px24">
+								<div class="table-col content-fluid overflow-visible px0 mx-24">
+									<table class="column01-sticky">
+										<caption>섹터지수</caption>
+										<thead>
+											<tr>
+												<th scope="col">지표명</th>
+												<th scope="col">1W</th>
+												<th scope="col">1M</th>
+												<th scope="col">3M</th>
+												<th scope="col">6M</th>
+												<th scope="col">YTD</th>
+												<th scope="col">1Y</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>공공서비스</td>
+												<td>0%</td>
+												<td class="bg-deepblue-50">0% &lt; X &lt;=5%</td>
+												<td class="bg-deepblue-100">5% &lt; X &lt;=10% </td>
+												<td class="bg-deepblue-200 fc-typography-white">10% &lt; X &lt;=15%</td>
+												<td class="bg-deepblue-300 fc-typography-white">15% &lt; X &lt;=20%</td>
+												<td class="bg-deepblue-400 fc-typography-white">20% &lt; X</td>
+											</tr>
+											<tr>
+												<td>금융</td>
+												<td>0%</td>
+												<td class="bg-red-50">0% &gt; X &gt;= -5%</td>
+												<td class="bg-red-100">-5% &gt; X &gt;= -10% </td>
+												<td class="bg-red-200 fc-typography-white">-10% &gt; X &gt;= -15%</td>
+												<td class="bg-red-300 fc-typography-white">-15% &gt; X &gt;= -20%</td>
+												<td class="bg-red-400 fc-typography-white">-20% &gt; X</td>
+											</tr>
+											<tr>
+												<td>기초소재</td>
+												<td class="bg-red-50">-0.97</td>
+												<td class="bg-deepblue-50">+3.97</td>
+												<td class="bg-deepblue-200 fc-typography-white">+11.84</td>
+												<td class="bg-deepblue-100 fc-typography-white">+9.39</td>
+												<td class="bg-deepblue-300 fc-typography-white">+15.54</td>
+												<td class="bg-deepblue-400 fc-typography-white">+20.34</td>
+											</tr>
+											<tr>
+												<td>멀티</td>
+												<td class="bg-red-50">-0.97</td>
+												<td class="bg-red-50">-3.97</td>
+												<td class="bg-red-200 fc-typography-white">-11.84</td>
+												<td class="bg-red-100 fc-typography-white">-9.39</td>
+												<td class="bg-red-300 fc-typography-white">-15.54</td>
+												<td class="bg-red-400 fc-typography-white">-20.34</td>
+											</tr>
+											<tr>
+												<td>소비재</td>
+												<td class="bg-red-50">-0.97</td>
+												<td class="bg-deepblue-50">+3.97</td>
+												<td class="bg-deepblue-200 fc-typography-white">+11.84</td>
+												<td class="bg-deepblue-100 fc-typography-white">+9.39</td>
+												<td class="bg-deepblue-300 fc-typography-white">+15.54</td>
+												<td class="bg-deepblue-400 fc-typography-white">+20.34</td>
+											</tr>
+											<tr>
+												<td>에너지</td>
+												<td class="bg-red-50">-0.97</td>
+												<td class="bg-deepblue-50">+3.97</td>
+												<td class="bg-deepblue-200 fc-typography-white">+11.84</td>
+												<td class="bg-deepblue-100 fc-typography-white">+9.39</td>
+												<td class="bg-deepblue-300 fc-typography-white">+15.54</td>
+												<td class="bg-deepblue-400 fc-typography-white">+20.34</td>
+											</tr>
+											<tr>
+												<td>정보기술(IT)</td>
+												<td class="bg-red-50">-0.97</td>
+												<td class="bg-deepblue-50">+3.97</td>
+												<td class="bg-deepblue-200 fc-typography-white">+11.84</td>
+												<td class="bg-deepblue-100 fc-typography-white">+9.39</td>
+												<td class="bg-deepblue-300 fc-typography-white">+15.54</td>
+												<td class="bg-deepblue-400 fc-typography-white">+20.34</td>
+											</tr>
+											<tr>
+												<td>헬스케어</td>
+												<td class="bg-red-50">-0.97</td>
+												<td class="bg-deepblue-50">+3.97</td>
+												<td class="bg-deepblue-200 fc-typography-white">+11.84</td>
+												<td class="bg-deepblue-100 fc-typography-white">+9.39</td>
+												<td class="bg-deepblue-300 fc-typography-white">+15.54</td>
+												<td class="bg-deepblue-400 fc-typography-white">+20.34</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
 						</div>
-
-						<div class="stock-index-list mt16">
-							<ul>
-								<li>
-									<a href="#">
-										<dl>
-											<dt>코스피200 <i class="live-on" aria-label="실시간"></i></dt>
-											<dd>9,999.99</dd>
-										</dl>
-										<div>
-											<div class="stock rise" aria-label="등락폭(상승)">00.00</div>
-											<div class="tags tags-small tags-red-100" aria-label="등락율">+00.00</div>
-										</div>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<dl>
-											<dt>코스피200</dt>
-											<dd>9,999.99</dd>
-										</dl>
-										<div>
-											<div class="stock fall" aria-label="등락폭(하락)">100.00</div>
-											<div class="tags tags-small tags-deepBlue" aria-label="등락율">-00.00</div>
-										</div>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<dl>
-											<dt>코스피200</dt>
-											<dd>9,999.99</dd>
-										</dl>
-										<div>
-											<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
-											<div class="tags tags-small tags-lightGray" aria-label="등락율">00.00</div>
-										</div>
-									</a>
-								</li>
-							</ul>
-						</div>
-
-						<p class="description caution body-small fc-typography-caption mt16">장 시작(8:30~9:30)과 장마감(15:00~16:00)중에는 일부 투자금액이 맞지 않을 수 있습니다.</p>
 					</div>
 
 
