--- a/html/index.html
+++ b/html/index.html
@@ -920,6 +920,38 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWIV020000</a></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>채권금리</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWIV030000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>환율/원자재</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWIV040000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>경제지표</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWIV050000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>섹터지수</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWIV060000</a></td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
