--- a/html/PBWIV/PBWIV060000.html
+++ b/html/PBWIV/PBWIV060000.html
@@ -114,7 +114,7 @@
 					<div class="stock-index">
 						<div class="stock-index-list content-fluid px0">
 							<h2 class="headline-small ac mt40">섹터지수</h2>
-							<div class="px24">
+							<div class="px24 mt24 mb40">
 								<div class="table-col content-fluid overflow-visible px0 mx-24">
 									<table class="column01-sticky">
 										<caption>섹터지수</caption>
@@ -205,6 +205,14 @@
 										</tbody>
 									</table>
 								</div>
+							</div>
+
+							<div class="stroke stroke4"></div>
+							<h2 class="headline-small ac mt40">지표별 수익률</h2>
+
+							<div id="chart">
+
+
 							</div>
 						</div>
 					</div>
