--- a/html/PBWFU/PBWFU000002.html
+++ b/html/PBWFU/PBWFU000002.html
@@ -131,8 +131,11 @@
 							<!-- sort-list -->
 							<button class="sort-list mrauto" data-micromodal-trigger="modal-select-filter" aria-label="정렬">
 								<span class="filter">
-									<span>전체</span>
-									<i class="badge ml0">3</i>
+									<span>수익률순</span>
+								</span>
+								<span class="division mx8"></span>
+								<span class="filter">
+									<span>3개월</span>
 								</span>
 								<span class="division mx8"></span>
 								<span class="sort">최신순</span>
@@ -299,9 +302,6 @@
 				</div>
 				<div class="modal__content">
 					<div class="content">
-
-
-
 						<!-- group-form -->
 						<div class="group-form">
 							<div class="group-title py16 px8">
