--- a/html/index.html
+++ b/html/index.html
@@ -996,6 +996,14 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWIV120000</a></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>지수 분석</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWIV120000</a></td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
