--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -137,7 +137,7 @@
 										<div class="info-th">회사</div>
 										<div class="info-td">
 											<div class="group gap10 py0">
-												회사이름
+												<span>회사이름</span>
 												<a href="#" class="anchor chevron fs-16">기업조회</a>
 											</div>
 										</div>
@@ -258,7 +258,7 @@
 								<div class="info-row">
 									<div class="info-th">등록자</div>
 									<div class="info-td">
-										나우리
+										<div>나우리</div>
 										<div class="divide-list mt4">
 											<span>부서명</span>
 											<div class="division h14 mx8"></div>
@@ -273,7 +273,7 @@
 								<div class="info-row">
 									<div class="info-th">최종수정자</div>
 									<div class="info-td">
-										나은행
+										<div>나은행</div>
 										<div class="divide-list mt4">
 											<span>부서명</span>
 											<div class="division h14 mx8"></div>
