--- a/html/index.html
+++ b/html/index.html
@@ -56,11 +56,36 @@
 					<tr>
 						<td></td>
 						<td>layout-header</td>
-						<td></td>
+						<td>GNB</td>
 						<td></td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">layout-header</a></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>GNB Search</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">layout-header_search</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>GNB Search Result</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">layout-header_search_result</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>GNB Search Result - noresult</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">layout-header_search_noresult</a></td>
+					</tr>
+
 					<tr>
 						<td>Template</td>
 						<td></td>
