--- a/html/PBWME/PBWME010000.html
+++ b/html/PBWME/PBWME010000.html
@@ -7,7 +7,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0, user-scalable=no">
 
 	<script src="../../resources/plugins/jquery/jquery.min.js"></script>
-
 	<!-- [plugins] -->
 	<!-- highlight -->
 	<link rel="stylesheet" href="../../resources/plugins/highlight.js/11.9.0/styles/vs2015.min.css">
@@ -61,100 +60,89 @@
 	<link rel="stylesheet" href="../../resources/css/ui-style.css">
 	<link rel="stylesheet" href="../../resources/css/ui-content.css">
 	<link rel="stylesheet" href="../../resources/css/ui-plugins.css">
-	<link rel="stylesheet" href="../../resources/css/ui-guide.css">
 
 	<script src="../../resources/js/ui-script.js"></script>
 	<script src="../../resources/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
-
 </head>
 
 <body>
-	<div class="ui-guide">
-		<h1>Form</h1>
-		<p>Toggle</p>
 
-		<div class="ui-guide-section">
-			<div class="ui-guide-box">
-				<h2>Text Position <span>Checkbox</span></h2>
-				<dl>
-					<dt></dt>
-					<dd>
-						<div class="inp inp-toggle">
-							<label>
-								<span class="label-title">레이블</span>
-								<input type="checkbox">
-							</label>
-						</div>
-					</dd>
-					<dd>
-						<div class="inp inp-toggle">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">레이블</span>
-							</label>
-						</div>
-					</dd>
-					<dd>
-						<div class="inp inp-toggle">
-							<label>
-								<span class="label-title">레이블</span>
-								<input type="checkbox">
-								<span class="label-title">레이블</span>
-							</label>
-						</div>
-					</dd>
-				</dl>
+	<!-- main -->
+	<main>
+
+		<!-- header -->
+		<header>
+			<div class="main-header">
+				<div class="left">
+					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
+				</div>
+				<div class="center">
+					<h1>구독설정</h1>
+				</div>
+				<div class="right">
+					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
+				</div>
 			</div>
-			<hr>
-			<div class="ui-guide-box">
-				<h2>inp-toggle-group</h2>
-				<dl>
-					<dt></dt>
-					<dd>
-						<div class="inp-toggle-group">
-							<div class="inp inp-toggle">
-								<label>
-									<span class="label-title">레이블</span>
-									<input type="checkbox">
-								</label>
-							</div>
-							<div class="inp inp-toggle">
-								<label>
-									<input type="checkbox">
-									<span class="label-title">레이블</span>
-								</label>
-							</div>
-							<div class="inp inp-toggle">
-								<label>
-									<span class="label-title">레이블</span>
-									<input type="checkbox">
-									<span class="label-title">레이블</span>
-								</label>
+		</header>
+		<!-- //header -->
+
+		<!-- main-inner -->
+		<!-- content start -->
+		<div class="main-inner">
+
+			<!-- container -->
+			<div id="container">
+
+				<!-- content -->
+				<div class="content">
+
+
+					<p class="description info body-small fc-typography-caption fw-400 my16">알림이 오지 않는다면, 휴대폰의 설정 -&gt; 알림 -&gt; RM/PM WON(가칭)에서 알림을 허용해주세요.</p>
+
+					<!-- group-form -->
+					<div class="group-form">
+						<div class="group-title p16">
+							<strong class="title-large px0">구독 설정</strong>
+						</div>
+						<div class="group-content mt0">
+							<div class="inp-toggle-group">
+								<div class="inp inp-toggle">
+									<label>
+										<span class="label-title">OOO구독</span>
+										<input type="checkbox">
+									</label>
+								</div>
+								<div class="inp inp-toggle">
+									<label>
+										<span class="label-title">OOO구독</span>
+										<input type="checkbox">
+									</label>
+								</div>
 							</div>
 						</div>
-					</dd>
-				</dl>
-			</div>
+					</div>
+					<!-- //group-form -->
 
-			<hr>
 
-			<div class="ui-guide-box">
-				<h2> <span>Radio</span></h2>
-				<dl>
-					<dt></dt>
-					<dd>
-						<div class="inp inp-toggle-text">
-							<input type="radio" name="toggle" aria-label="오전">
-							<input type="radio" name="toggle" aria-label="오후">
-						</div>
-					</dd>
-				</dl>
+				</div>
+				<!-- //content -->
 			</div>
+			<!-- //container -->
 
 
 		</div>
-	</div>
+		<!-- //content end -->
+		<!-- //main-inner -->
+
+
+
+	</main>
+	<!-- //main -->
+	<script>
+		$swal.fire02('Push 알림이 꺼져 있습니다. <br> 휴대폰의 설정->알림->RM/PB WON(가칭)에서 알림을 허용해주세요.', 'caution', '예', true, '아니요');
+	</script>
+
 </body>
 
 </html>
